styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Shared styles */

.work-sans {
  font-family: "Work Sans", sans-serif;
  font-style: normal;
}
.text-center{
    text-align: center;
}
.btn{
    font-size: 20px;
    font-weight: 600;
    border: none;
    border-radius: 5px;
    padding: 20px 25px;
    cursor: pointer;
    color: white;
    background-color: #F15B22;
}

/*Header styles*/

header{
    /* border: 2px solid red; */
    /* padding-top: 1px; */
    height: 100vh;
    background-image: url("../images/banner/banner2.png");
    background-repeat: no-repeat;
    background-size: cover;
}
#banner{
    width: 525px;
    max-width: 100%;
    margin: 216px 230px 167px auto;
}
#banner .banner-content{
    border: 2px solid red;
    max-width: 525px;
    text-align: right;
}
#banner h1{
    font-size: 65px;
    font-weight: bold;
    color: black;
    padding-bottom: 24px;
}
#banner p{
    width: 494px;
    max-width: 100%;
    margin-left: auto;
    font-size: 16px;
    line-height: 26px;
    color: #444343;
    padding-bottom: 32px;
}

